[tool.poetry]
name = "raddish"
version = "0.2.3"
description = "Async-native Redis-backed RPC and job queue"
license = "Apache-2.0"
authors = ["Daniil Larionov <rexhaif.io@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
pydantic = "^2.2.0"
orjson = "^3.9.7"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
rich = "^13.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
